--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "html-webpack-plugin": "^4.3.0",
     "jest": "^26.4.0",
     "react-test-renderer": "^16.13.1",
+    "svg-sprite-loader": "^5.0.0",
     "ts-jest": "^26.2.0",
     "typescript": "^3.9.7",
     "webpack": "^4.44.1",
