--- a/package.json
+++ b/package.json
@@ -30,9 +30,12 @@
     "awesome-typescript-loader": "^5.2.1",
     "babel-jest": "^26.3.0",
     "cross-env": "^7.0.2",
+    "css-loader": "^4.2.2",
     "html-webpack-plugin": "^4.3.0",
     "jest": "^26.4.0",
     "react-test-renderer": "^16.13.1",
+    "sass-loader": "^10.0.1",
+    "style-loader": "^1.2.1",
     "svg-sprite-loader": "^5.0.0",
     "ts-jest": "^26.2.0",
     "typescript": "^3.9.7",
