--- a/package.json
+++ b/package.json
@@ -29,8 +29,11 @@
     "@types/react-test-renderer": "^16.9.3",
     "awesome-typescript-loader": "^5.2.1",
     "babel-jest": "^26.3.0",
+    "babel-preset-react-app": "^9.1.2",
     "cross-env": "^7.0.2",
     "css-loader": "^4.2.2",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.4",
     "html-webpack-plugin": "^4.3.0",
     "jest": "^26.4.0",
     "node-sass": "^4.14.1",
