--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
   "bugs": {
     "url": "https://github.com/pzjyyzs/pzui-react/issues"
   },
-  "files": ["/dist"],
+  "files": [
+    "/dist"
+  ],
   "homepage": "https://github.com/pzjyyzs/pzui-react#readme",
   "devDependencies": {
     "@babel/preset-env": "^7.11.0",
@@ -51,7 +53,9 @@
     "webpack-dev-server": "^3.11.0"
   },
   "dependencies": {
+    "@types/react-router-dom": "^5.1.5",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0"
   }
 }
