--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "css-loader": "^4.2.2",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.4",
+    "file-loader": "^6.1.1",
     "html-webpack-plugin": "^4.3.0",
     "jest": "^26.4.0",
     "jest-junit": "^11.1.0",
