--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "jest": "^26.4.0",
     "jest-junit": "^11.1.0",
     "node-sass": "^4.14.1",
+    "raw-loader": "^4.0.2",
     "react-test-renderer": "^16.13.1",
     "sass-loader": "^10.0.1",
     "style-loader": "^1.2.1",
