--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/react": "^16.9.46",
     "@types/react-dom": "^16.9.8",
     "@types/react-test-renderer": "^16.9.3",
+    "@types/styled-components": "^5.1.14",
     "awesome-typescript-loader": "^5.2.1",
     "babel-jest": "^26.3.0",
     "babel-preset-react-app": "^9.1.2",
@@ -49,6 +50,7 @@
     "react-test-renderer": "^16.13.1",
     "sass-loader": "^10.0.1",
     "style-loader": "^1.2.1",
+    "styled-components": "^5.3.1",
     "svg-sprite-loader": "^5.0.0",
     "ts-jest": "^26.2.0",
     "typescript": "^3.9.7",
